# SwoopsPython

./: README.md  main.py  players.csv  requirements.txt
backend/: README.MD  pyproject.toml
backend/src/data/: ApiDataStore.py  HtmlDataStore.py  LocalDbDataStore.py  PathProvider.py  PlayerRepositoryImpl.py
backend/src/data/model/: PlayerDto.py
backend/src/di/data/: DataDi.py
backend/src/di/domain/: DomainDi.py
backend/src/domain/: PlayerRepository.py  SkillName.py  SkillRank.py  Trait.py
backend/src/domain/mapper/: PlayerMapper.py
backend/src/domain/model/: Player.py  SkillDetail.py
backend/src/domain/usecase/: ExportPlayersToDbUseCase.py  FilterOnInterestingPlayersUseCase.py  FilterOnPlayerNumbersUseCase.py  GetPlayersAfterSkillsUpdateUseCase.py  GetPlayersUseCase.py  MigrateFilesFromHtmlToApiUseCase.py  StoreInDbUseCase.py
frontend/: MANIFEST.in  package-lock.json  setup.py  tailwind.config.js
frontend/front/: __init__.py  db.py  schema.sql  search.py
frontend/front/common/: PlayerUi.py  PlayerUiMapper.py  ShortSkillName.py  SkillDetailUi.py
frontend/front/di/presentation/: PresentationDi.py
frontend/front/presentation/: SearchViewModel.py
frontend/front/static/: style.css
frontend/front/static/src/: input.css
frontend/front/templates/: base.html
frontend/front/templates/search/: search.html
playerstest/: player_1.html  player_2.html
savedplayers/: 1.json  2.json
scrapper/swoopsscrapper/: scrapy.cfg
scrapper/swoopsscrapper/swoopsscrapper/: items.py  middlewares.py  pipelines.py  settings.py
(+2 files in other folders)
