[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend_ymotpyrc"
version = "0.0.1"
authors = [
  { name="ymotpyrc", email="ymotpyrc@proton.me" },
]
description = "Swoops statistics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/ymotpyrc"
